finished section 5 lecture 38

--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -7,8 +7,10 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/composition";
 @import "components/button";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
