--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -18,17 +18,28 @@
       opacity: 0;
     }
   }
+
   &:active{
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
+
   &--white{
     color: $color-grey-dark;
     background-color: $color-white;
     &::after{
-      background-color: white;
+      background-color: $color-white;
     }
   }
+
+  &--green{
+    color: $color-white;
+    background-color: $color-primary;
+    &::after{
+      background-color: $color-primary;
+    }
+  }
+
   &::after{
     content: "";
     display: inline-block;
@@ -41,6 +52,7 @@
     z-index: -1;
     transition: all 0.4s;
   }
+
   &--animated{
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
