--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -1,6 +1,6 @@
 
 .btn{
-  &:link, &:visited {
+  &, &:link, &:visited {
     text-decoration: none;
     text-transform: uppercase;
     padding: 1.5rem 4rem;
@@ -9,6 +9,8 @@
     transition: all .2s;
     position: relative;
     font-size: $default-font-size;
+    cursor: pointer;
+    border: none;
   }
   &:hover{
     transform: translateY(-0.3rem);
@@ -19,7 +21,8 @@
     }
   }
 
-  &:active{
+  &:active, &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
