--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -12,3 +12,34 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/*
+  0 - 600px : phone
+  601px - 900px : tablet portrait
+  901px - 1200px : table landscape
+  [1201px - 1800px] is where our normal displays apply
+  1800px + big desktop
+
+  $breakpoint choice arguments:
+  - phone
+  - tab-port
+  - tab-land
+  - big-desktop
+
+  1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) { @content }; //600px
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) { @content }; //900px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) { @content }; //1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media (max-width: 112.5em) { @content }; //1800px
+  }
+}
